--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Simple Javascript Animation",
   "version": "0.1.0",
   "license": "MIT",
-  "main": "dist/animation.umd.js",
+  "main": "src/index.js",
   "scripts": {
     "prepublishOnly": "npm run build",
     "start": "npm-run-all stop serve",
